# poor-house-juno

./: .gitignore  BUILDING.md  CMakeLists.txt  DEPLOY.md  FAITHFULNESS_CHECK_2026-01-10.md  FIX_STATIC_AUDIO.md  JUNO_EVALUATION.md  LICENSE  M15_COMPLETION_SUMMARY.md  M15_TAL_COMPARISON_TOOLS.md  M16_COMPLETION_SUMMARY.md  M16_FINAL_STATUS.md  M16_TESTING_GUIDE.md  PUNCHLIST.md  PUNCHLIST_UPDATED_2026-01-10.md  README.md  SUMMARY.md  TEST_FINDINGS.md  audio_worklet.js  check-audio-formats.sh  debug-service.sh  diagnose.sh  fix-service.sh  install.sh  rebuild.sh  synth-processor.js  synth-processor.wasm
.github/workflows/: build-and-deploy.yml  build.yml  deploy-pages.yml
css/: juno.css
docs/: architecture.md  chorus_analysis.md  dsp_design.md  filter_tuning.md  juno106_analysis.md  midi_cc_map.md  pi_setup.md  web_interface.md
js/: app.js  keyboard.js  ui.js
scripts/: build_pi.sh  build_web.sh  deploy_pi.sh  deploy_web.sh  setup_pi.sh
src/dsp/: chorus.cpp  chorus.h  dco.cpp  dco.h  envelope.cpp  envelope.h  filter.cpp  filter.h  lfo.cpp  lfo.h  oscillator.cpp  oscillator.h  parameters.h  synth.cpp  synth.h  types.h  voice.cpp  voice.h
src/platform/pi/: audio_driver.cpp  audio_driver.h  main.cpp  midi_driver.cpp  midi_driver.h
src/platform/web/: audio_worklet.js  main.cpp
tests/: CMakeLists.txt  test_chorus.cpp  test_envelope.cpp  test_filter.cpp  test_lfo.cpp  test_main.cpp  test_oscillator.cpp  test_voice.cpp
tools/: README.md  analyze_tal.py  generate_reference.py  measure_chorus.py  measure_filter.py  profile_performance.cpp  requirements.txt
web/: audio_worklet.js  index.html
web/css/: juno.css
web/js/: app.js  audio.js  midi.js  presets.js  ui.js
